Add some translations

--- a/l10n/po/ja_JP/_guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_guides/cache.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:49+0900\n"
-"PO-Revision-Date: 2022-02-03 16:24+0900\n"
+"PO-Revision-Date: 2022-02-04 15:25+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -81,15 +81,13 @@ msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:39
-#, fuzzy
 msgid "First, we need to create a new Quarkus project with the following command:"
 msgstr "まず、以下のコマンドで新しいQuarkusプロジェクトを作成します。"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:45
-#, fuzzy
 msgid "This command generates the project and imports the `cache` and `resteasy-jackson` extensions."
-msgstr "このコマンドは、プロジェクトを生成し、 `cache` と `resteasy-jackson` の拡張子をインポートします。"
+msgstr "このコマンドは、プロジェクトを生成し、 `cache` と `resteasy-jackson` のエクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:48
@@ -946,7 +944,7 @@ msgstr "`bar` キャッシュの設定を行っています。"
 #: upstream/_guides/cache.adoc:522
 #, fuzzy, no-wrap
 msgid "Enabling Micrometer metrics"
-msgstr "マイクロメータの測定を可能にする"
+msgstr "Micrometerの測定を可能にする"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:525
