--- a/l10n/po/ja_JP/_guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/container-image.adoc.po
@@ -183,7 +183,7 @@ msgstr "ビルドパック"
 #: upstream/_guides/container-image.adoc:102
 #, fuzzy
 msgid "The extension `quarkus-container-image-buildpack` is using buildpacks in order to perform container image builds.  Under the hood buildpacks will use a Docker daemon for the actual build.  While buildpacks support alternatives to Docker, this extension will only work with Docker."
-msgstr "`quarkus-container-image-buildpack` は、コンテナイメージのビルドを行うために buildpacks を使用しています。buildpacksは、実際のビルドにDockerデーモンを使用します。buildpacksはDockerの代替品をサポートしていますが、この拡張機能はDockerでのみ動作します。"
+msgstr "`quarkus-container-image-buildpack` は、コンテナイメージのビルドを行うために buildpacks を使用しています。buildpacksは、実際のビルドにDockerデーモンを使用します。buildpacksはDockerの代替品をサポートしていますが、このエクステンションはDockerでのみ動作します。"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:104
