--- a/l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po
@@ -96,7 +96,7 @@ msgstr "Dev UI"
 #: upstream/_guides/dev-mode-differences.adoc:40
 #, fuzzy
 msgid "Quarkus provides a very useful xref:dev-ui.adoc[UI] accessible from the browser at `/q/dev`. This UI allows a developer to see the state of the application, but also provides access to various actions that can change that state (depending on the extensions that are present).  Examples of such operations are:"
-msgstr "Quarkusは、ブラウザからアクセスできる非常に便利な link:dev-ui.html[UI]を提供しています。 `/q/dev` 。このUIにより、開発者はアプリケーションの状態を確認できるだけでなく、（存在する拡張機能に応じて）その状態を変更できる様々な操作にアクセスできます。そのような操作の例は以下の通りです。"
+msgstr "Quarkusは、ブラウザからアクセスできる非常に便利な link:dev-ui.html[UI]を提供しています。 `/q/dev` 。このUIにより、開発者はアプリケーションの状態を確認できるだけでなく、（存在するエクステンションに応じて）その状態を変更できる様々な操作にアクセスできます。そのような操作の例は以下の通りです。"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:42
