--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -1117,7 +1117,7 @@ msgstr "開発モードで実行しているときに link:flyway.html[Flywayエ
 #: upstream/_guides/hibernate-orm.adoc:554
 #, fuzzy
 msgid "To use this feature simply open the Dev UI when the `quarkus-flyway` extension is installed and click in the `Datasources` link in the Flyway pane. Hit the `Create Initial Migration` button and the following will happen:"
-msgstr "この機能を使用するには、 `quarkus-flyway` 拡張機能がインストールされている状態で Dev UI を開き、Flyway ペインの `Datasources` リンクをクリックします。 `Create Initial Migration` ボタンを押すと、以下のようになります。"
+msgstr "この機能を使用するには、 `quarkus-flyway` エクステンションがインストールされている状態で Dev UI を開き、Flyway ペインの `Datasources` リンクをクリックします。 `Create Initial Migration` ボタンを押すと、以下のようになります。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:556
