--- a/l10n/po/ja_JP/_guides/hibernate-reactive-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-reactive-panache.adoc.po
@@ -175,7 +175,7 @@ msgstr "Panache拡張によるHibernate Reactive"
 #: upstream/_guides/hibernate-reactive-panache.adoc:74
 #, fuzzy
 msgid "your reactive driver extension (`quarkus-reactive-pg-client`, `quarkus-reactive-mysql-client`, `quarkus-reactive-db2-client`, ...)"
-msgstr "あなたのリアクティブ・ドライバの拡張子 ( `quarkus-reactive-pg-client`, `quarkus-reactive-mysql-client`, `quarkus-reactive-db2-client`, ... )"
+msgstr "あなたのリアクティブ・ドライバのエクステンション ( `quarkus-reactive-pg-client`, `quarkus-reactive-mysql-client`, `quarkus-reactive-db2-client`, ... )"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-reactive-panache.adoc:76
