--- a/l10n/po/ja_JP/_guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-schema-registry-avro.adoc.po
@@ -104,7 +104,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 #: upstream/_guides/kafka-schema-registry-avro.adoc:57
 #, fuzzy
 msgid "If you use Confluent Schema Registry, you don't need the `quarkus-apicurio-registry-avro` extension.  Instead, you need the following dependencies and the Confluent Maven repository added to your build file:"
-msgstr "Confluent Schema Registryを使用している場合は、 `quarkus-apicurio-registry-avro` の拡張機能は必要ありません。代わりに、以下の依存関係とConfluent Mavenリポジトリをビルドファイルに追加する必要があります。"
+msgstr "Confluent Schema Registryを使用している場合は、 `quarkus-apicurio-registry-avro` のエクステンションは必要ありません。代わりに、以下の依存関係とConfluent Mavenリポジトリをビルドファイルに追加する必要があります。"
 
 #. type: Block title
 #: upstream/_guides/kafka-schema-registry-avro.adoc:59
