--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -2491,7 +2491,7 @@ msgstr "JSON-B によるシリアライズ"
 #: upstream/_guides/kafka.adoc:1311
 #, fuzzy
 msgid "First, you need to include the `quarkus-jsonb` extension."
-msgstr "まず、 `quarkus-jsonb` 拡張子を入れる必要があります。"
+msgstr "まず、 `quarkus-jsonb` エクステンションを入れる必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:1319
