--- a/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
@@ -901,7 +901,7 @@ msgstr "データベース"
 #: upstream/_guides/reactive-sql-clients.adoc:478
 #, fuzzy, no-wrap
 msgid "Extension name"
-msgstr "拡張子名"
+msgstr "エクステンション名"
 
 #. type: Table
 #: upstream/_guides/reactive-sql-clients.adoc:478
