--- a/l10n/po/ja_JP/_guides/security-built-in-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-built-in-authentication.adoc.po
@@ -40,7 +40,7 @@ msgstr "ベーシック認証"
 #: upstream/_guides/security-built-in-authentication.adoc:17
 #, fuzzy
 msgid "To enable basic authentication set `quarkus.http.auth.basic=true`. You must also have at least one extension installed that provides a username/password based `IdentityProvider`, such as xref:security-jdbc.adoc[Elytron JDBC]."
-msgstr "ベーシック認証を有効にするには、 `quarkus.http.auth.basic=true` を設定します。また、 link:security-jdbc.html[Elytron JDBC] など、ユーザー名/パスワードベースの `IdentityProvider` を提供する拡張機能が少なくとも1つインストールされている必要があります。"
+msgstr "ベーシック認証を有効にするには、 `quarkus.http.auth.basic=true` を設定します。また、 link:security-jdbc.html[Elytron JDBC] など、ユーザー名/パスワードベースの `IdentityProvider` を提供するエクステンションが少なくとも1つインストールされている必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-built-in-authentication.adoc:19
