--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -593,7 +593,7 @@ msgstr "素晴らしい！リクエストにJWTを提供していないので、
 #: upstream/_guides/security-jwt.adoc:303
 #, fuzzy, no-wrap
 msgid "Configuring the {extension-name} Extension Security Information"
-msgstr "拡張子{{extension-name}}のセキュリティ情報を設定する"
+msgstr "エクステンション{{extension-name}}のセキュリティ情報を設定する"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:306
@@ -1155,7 +1155,7 @@ msgstr "ソリューションを見る"
 #: upstream/_guides/security-jwt.adoc:633
 #, fuzzy
 msgid "The solution repository located in the `security-jwt-quickstart` {quickstarts-tree-url}/security-jwt-quickstart[directory] contains all of the versions we have worked through in this quickstart guide as well as some additional endpoints that illustrate subresources with injection of ``JsonWebToken``s and their claims into those using the CDI APIs. We suggest that you check out the quickstart solutions and explore the `security-jwt-quickstart` directory to learn more about the {extension-name} extension features."
-msgstr "`security-jwt-quickstart` {quickstarts-tree-url}/security-jwt-quickstart[directory]にあるソリューションリポジトリには、このクイックスタートガイドで扱ったすべてのバージョンのほか、CDI APIを使用したものに `JsonWebToken`sとそのクレームを注入したサブリソースを説明するいくつかの追加エンドポイントが含まれています。クイックスタートソリューションをチェックし、 `security-jwt-quickstart` ディレクトリを探索して {extension-name} 拡張機能の詳細を確認することをお勧めします。"
+msgstr "`security-jwt-quickstart` {quickstarts-tree-url}/security-jwt-quickstart[directory]にあるソリューションリポジトリには、このクイックスタートガイドで扱ったすべてのバージョンのほか、CDI APIを使用したものに `JsonWebToken`sとそのクレームを注入したサブリソースを説明するいくつかの追加エンドポイントが含まれています。クイックスタートソリューションをチェックし、 `security-jwt-quickstart` ディレクトリを探索して {extension-name} エクステンションの詳細を確認することをお勧めします。"
 
 #. type: Title ==
 #: upstream/_guides/security-jwt.adoc:634
@@ -1755,7 +1755,7 @@ msgstr "SmallRye JWTを直接追加する方法"
 #: upstream/_guides/security-jwt.adoc:952
 #, fuzzy
 msgid "If you work with Quarkus extensions which do not support `HTTP` (for example, `Quarkus GRPC`) or provide their own extension specific `HTTP` support conflicting with the one offered by `quarkus-smallrye-jwt` and `Vert.x HTTP` (example, `Quarkus Amazon Lambda`) and you would like to <<jwt-parser, Parse and Verify JsonWebToken with JWTParser>> then please use `smallrye-jwt` directly instead of `quarkus-smallrye-jwt`."
-msgstr "`HTTP` をサポートしていないQuarkusの拡張機能を使用している場合（たとえば、 `Quarkus GRPC` ）、または、 `quarkus-smallrye-jwt` および `Vert.x HTTP` が提供するものと競合する独自の拡張機能固有の `HTTP` サポートを提供している場合（たとえば、 `Quarkus Amazon Lambda` ）、 link:#jwt-parser[JWTParserを使用してJsonWebTokenを解析および]検証したい場合は、 `quarkus-smallrye-jwt` の代わりに `smallrye-jwt` を直接使用してください。"
+msgstr "`HTTP` をサポートしていないQuarkusのエクステンションを使用している場合（たとえば、 `Quarkus GRPC` ）、または、 `quarkus-smallrye-jwt` および `Vert.x HTTP` が提供するものと競合する独自の拡張機能固有の `HTTP` サポートを提供している場合（たとえば、 `Quarkus Amazon Lambda` ）、 link:#jwt-parser[JWTParserを使用してJsonWebTokenを解析および]検証したい場合は、 `quarkus-smallrye-jwt` の代わりに `smallrye-jwt` を直接使用してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:954
