--- a/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
@@ -41,7 +41,7 @@ msgstr "はじめに"
 #: upstream/_guides/security-openid-connect-dev-services.adoc:17
 #, fuzzy
 msgid "Quarkus introduces an experimental `Dev Services For Keycloak` feature which is enabled by default when the `quarkus-oidc` extension is started in dev mode with `mvn quarkus:dev` and when the integration tests are running in test mode, but only when no `quarkus.oidc.auth-server-url` property is configured.  It starts a Keycloak container for both the dev and/or test modes and initializes them by registering the existing Keycloak realm or creating a new realm with the client and users for you to start developing your Quarkus application secured by Keycloak immediately. It will restart the container when the `application.properties` or the realm file changes have been detected."
-msgstr "Quarkusは、実験的な `Dev Services For Keycloak` 機能を導入しています。この機能は、 `quarkus-oidc` 拡張機能が開発モードで `mvn quarkus:dev` と共に開始され、統合テストがテストモードで実行されているときにデフォルトで有効になりますが、 `quarkus.oidc.auth-server-url` プロパティが設定されていない場合にのみ有効になります。devモードとtestモードの両方でKeycloakコンテナを起動し、既存のKeycloakレルムを登録するか、クライアントとユーザーで新しいレルムを作成することでそれらを初期化し、Keycloakで保護されたQuarkusアプリケーションの開発をすぐに始めることができます。 `application.properties` またはレルムファイルの変更が検出されると、コンテナを再起動します。"
+msgstr "Quarkusは、実験的な `Dev Services For Keycloak` 機能を導入しています。この機能は、 `quarkus-oidc` エクステンションが開発モードで `mvn quarkus:dev` と共に開始され、統合テストがテストモードで実行されているときにデフォルトで有効になりますが、 `quarkus.oidc.auth-server-url` プロパティが設定されていない場合にのみ有効になります。devモードとtestモードの両方でKeycloakコンテナを起動し、既存のKeycloakレルムを登録するか、クライアントとユーザーで新しいレルムを作成することでそれらを初期化し、Keycloakで保護されたQuarkusアプリケーションの開発をすぐに始めることができます。 `application.properties` またはレルムファイルの変更が検出されると、コンテナを再起動します。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-dev-services.adoc:19
