--- a/l10n/po/ja_JP/_guides/security.adoc.po
+++ b/l10n/po/ja_JP/_guides/security.adoc.po
@@ -120,7 +120,7 @@ msgstr "OpenID Connect"
 #: upstream/_guides/security.adoc:48
 #, fuzzy
 msgid "`quarkus-oidc` extension provides a reactive, interoperable, multi-tenant enabled OpenID Connect adapter which supports `Bearer Token` and `Authorization Code Flow` authentication mechanisms."
-msgstr "`quarkus-oidc` 拡張機能は、反応性、相互運用性、マルチテナント対応のOpenID Connectアダプタを提供し、 `Bearer Token` と `Authorization Code Flow` の認証メカニズムをサポートします。"
+msgstr "`quarkus-oidc` エクステンションは、反応性、相互運用性、マルチテナント対応のOpenID Connectアダプタを提供し、 `Bearer Token` と `Authorization Code Flow` の認証メカニズムをサポートします。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:51
@@ -183,7 +183,7 @@ msgstr "OpenID Connectクライアントとフィルタ"
 #: upstream/_guides/security.adoc:81
 #, fuzzy
 msgid "`quarkus-oidc-client` extension provides `OidcClient` for acquiring and refreshing access tokens from OpenID Connect and OAuth2 providers which support `client-credentials`, `password` and `refresh_token` token grants."
-msgstr "`quarkus-oidc-client` 拡張機能は、 `client-credentials` 、 `password` 、 `refresh_token` トークングラントをサポートするOpenID ConnectやOAuth2プロバイダからアクセストークンを取得し、リフレッシュするための `OidcClient` を提供します。"
+msgstr "`quarkus-oidc-client` エクステンションは、 `client-credentials` 、 `password` 、 `refresh_token` トークングラントをサポートするOpenID ConnectやOAuth2プロバイダからアクセストークンを取得し、リフレッシュするための `OidcClient` を提供します。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:83
@@ -257,7 +257,7 @@ msgstr "OpenID Connect、SmallRye JWT、OAuth2エクステンションの選択"
 #: upstream/_guides/security.adoc:109
 #, fuzzy
 msgid "`quarkus-oidc` extension requires an OpenID Connect provider such as Keycloak which can be used to verify the Bearer tokens or authenticate the end users with the Authorization Code flow. In both cases `quarkus-oidc` requires a connection to this OpenID Connect provider."
-msgstr "`quarkus-oidc` 拡張機能には、Bearer トークンの検証やAuthorization Code フローによるエンドユーザーの認証に使用できる Keycloak などの OpenID Connect プロバイダーが必要です。どちらの場合も、 `quarkus-oidc` はこのOpenID Connectプロバイダへの接続を必要とします。"
+msgstr "`quarkus-oidc` エクステンションには、Bearer トークンの検証やAuthorization Code フローによるエンドユーザーの認証に使用できる Keycloak などの OpenID Connect プロバイダーが必要です。どちらの場合も、 `quarkus-oidc` はこのOpenID Connectプロバイダへの接続を必要とします。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:111
@@ -273,13 +273,13 @@ msgstr "ベアラートークンを検証する必要がある場合は、 `quar
 #: upstream/_guides/security.adoc:115
 #, fuzzy
 msgid "If you have Bearer tokens in a JWT format then all these 3 extensions can be used. Both `quarkus-oidc` and `quarkus-smallrye-jwt` support refreshing the JsonWebKey (JWK) set when the OpenID Connect provider rotates the keys, therefore `quarkus-oidc` or `quarkus-smallrye-jwt` should be used for verifying JWT tokens if the remote token introspection has to be avoided or not supported by the providers."
-msgstr "JWT形式のBearerトークンを持っている場合、これら3つの拡張機能はすべて使用できます。 `quarkus-oidc` と `quarkus-smallrye-jwt` は、OpenID Connect プロバイダがキーをローテーションしたときに JsonWebKey (JWK) セットをリフレッシュすることをサポートしています。したがって、リモート・トークンのイントロスペクションを回避しなければならない場合や、プロバイダがサポートしていない場合は、JWT トークンの検証に `quarkus-oidc` または `quarkus-smallrye-jwt` を使用する必要があります。"
+msgstr "JWT形式のBearerトークンを持っている場合、これら3つのエクステンションはすべて使用できます。 `quarkus-oidc` と `quarkus-smallrye-jwt` は、OpenID Connect プロバイダがキーをローテーションしたときに JsonWebKey (JWK) セットをリフレッシュすることをサポートしています。したがって、リモート・トークンのイントロスペクションを回避しなければならない場合や、プロバイダがサポートしていない場合は、JWT トークンの検証に `quarkus-oidc` または `quarkus-smallrye-jwt` を使用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:117
 #, fuzzy
 msgid "`quarkus-smallrye-jwt` does not support the remote introspection of the opaque tokens or even JWT tokens - it always relies on the locally available keys - possibly fetched from the OpenID Connect provider. So if you need to introspect the JWT tokens remotely then both `quarkus-oidc` and `quarkus-elytron-security-oauth2` will work. Both extensions also support the verification of the opaque/binary tokens via the remote introspection."
-msgstr "`quarkus-smallrye-jwt` は、不透明なトークンやJWTトークンのリモートイントロスペクションをサポートしていません。それは常に、ローカルで利用可能なキー（おそらくOpenID Connectプロバイダから取得されたもの）に依存しています。したがって、JWTトークンをリモートでイントロスペクションする必要がある場合は、 `quarkus-oidc` と `quarkus-elytron-security-oauth2` の両方が機能します。両方の拡張機能は、リモートイントロスペクションによる不透明/バイナリトークンの検証もサポートしています。"
+msgstr "`quarkus-smallrye-jwt` は、不透明なトークンやJWTトークンのリモートイントロスペクションをサポートしていません。それは常に、ローカルで利用可能なキー（おそらくOpenID Connectプロバイダから取得されたもの）に依存しています。したがって、JWTトークンをリモートでイントロスペクションする必要がある場合は、 `quarkus-oidc` と `quarkus-elytron-security-oauth2` の両方が機能します。両方のエクステンションは、リモートイントロスペクションによる不透明/バイナリトークンの検証もサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/security.adoc:119
