--- a/l10n/po/ja_JP/_guides/spring-cache.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-cache.adoc.po
@@ -496,7 +496,7 @@ msgstr "Spring Cache APIのためのQuarkusエクステンション"
 #: upstream/_guides/spring-cache.adoc:272
 #, fuzzy
 msgid "xref:spring-security.adoc[Quarkus - Extension for Spring Security]"
-msgstr "link:spring-security.html[Quarkus - Spring Securityの拡張機能]"
+msgstr "link:spring-security.html[Quarkus - Spring Securityのエクステンション]"
 
 #. type: Plain text
 #: upstream/_guides/spring-cache.adoc:273
@@ -508,7 +508,7 @@ msgstr "Spring Cache APIのためのQuarkusエクステンション"
 #: upstream/_guides/spring-cache.adoc:274
 #, fuzzy
 msgid "xref:spring-data-rest.adoc[Quarkus - Extension for Spring Data REST]"
-msgstr "link:spring-data-rest.html[Quarkus - Spring Data RESTの拡張機能]"
+msgstr "link:spring-data-rest.html[Quarkus - Spring Data RESTのエクステンション]"
 
 #. type: Plain text
 #: upstream/_guides/spring-cache.adoc:275
@@ -520,7 +520,7 @@ msgstr "link:spring-cloud-config-client.html[Quarkus - Spring Cloud Config Serve
 #: upstream/_guides/spring-cache.adoc:276
 #, fuzzy
 msgid "xref:spring-boot-properties.adoc[Quarkus - Extension for Spring Boot properties]"
-msgstr "link:spring-boot-properties.html[Quarkus - Spring Bootプロパティ用の拡張機能]"
+msgstr "link:spring-boot-properties.html[Quarkus - Spring Bootプロパティ用のエクステンション]"
 
 #. type: Plain text
 #: upstream/_guides/spring-cache.adoc:276
