--- a/l10n/po/ja_JP/_posts/2019-10-12-quarkus-0-24.0-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-10-12-quarkus-0-24.0-released.adoc.po
@@ -130,7 +130,7 @@ msgstr "データベースからユーザーを読み込むことができる li
 #: upstream/_posts/2019-10-12-quarkus-0-24.0-released.adoc:36
 #, fuzzy
 msgid "HTTP basic auth is now enabled by the `quarkus.http-auth.basic=true` property. To use this, you will need to have the `elytron-security-properties-file` or the (still alpha) `elytron-security-jdbc` extension in your application."
-msgstr "`quarkus.http-auth.basic=true` プロパティにより、HTTP 基本認証が有効になりました。これを使用するには、アプリケーションに `elytron-security-properties-file` または (まだアルファ版の) `elytron-security-jdbc` という拡張子が必要です。"
+msgstr "`quarkus.http-auth.basic=true` プロパティにより、HTTP 基本認証が有効になりました。これを使用するには、アプリケーションに `elytron-security-properties-file` または (まだアルファ版の) `elytron-security-jdbc` というエクステンションが必要です。"
 
 #. type: Plain text
 #: upstream/_posts/2019-10-12-quarkus-0-24.0-released.adoc:37
