--- a/l10n/po/ja_JP/_guides/amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-lambda.adoc.po
@@ -787,7 +787,7 @@ msgstr "AWS Java SDK v2 の利用"
 #: upstream/_guides/amazon-lambda.adoc:448
 #, fuzzy
 msgid "Quarkus now has extensions for DynamoDB, S3, SNS and SQS (more coming).  Please check link:{amazon-services-guide}[those guides] on how to use the various AWS Services with Quarkus, as opposed to wiring manually like below."
-msgstr "Quarkusは現在、DynamoDB、S3、SNS、SQSの拡張機能を備えています（今後さらに増える予定です）。以下のように手動で配線するのではなく、Quarkusで様々なAWSサービスを使用する方法については、 link:{amazon-services-guide}[これらのガイド]を確認してください。"
+msgstr "Quarkusは現在、DynamoDB、S3、SNS、SQSのエクステンションを備えています（今後さらに増える予定です）。以下のように手動で配線するのではなく、Quarkusで様々なAWSサービスを使用する方法については、 link:{amazon-services-guide}[これらのガイド]を確認してください。"
 
 #. type: Plain text
 #: upstream/_guides/amazon-lambda.adoc:451
