--- a/l10n/po/ja_JP/_guides/azure-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/azure-functions-http.adoc.po
@@ -215,7 +215,7 @@ msgstr "エクステンションのmaven依存関係"
 #: upstream/_guides/azure-functions-http.adoc:101
 #, fuzzy
 msgid "The sample project includes the RESTEasy, Undertow, Reactive Routes, xref:funqy-http.adoc[Funqy HTTP] extensions.  If you are only using one of those APIs (i.e. jax-rs only), respectively remove the maven dependency `quarkus-resteasy`, `quarkus-undertow`, `quarkus-funqy-http`, and/or `quarkus-reactive-routes`."
-msgstr "サンプルプロジェクトには、RESTEasy、Undertow、Reactive Routes、 link:funqy-http.html[FunqyのHTTP]拡張機能が含まれています。これらの API のうち 1 つだけを使用する場合 (例: jax-rs のみ) は、それぞれ `quarkus-resteasy`, `quarkus-undertow`, `quarkus-funqy-http`, および/または `quarkus-reactive-routes` の maven 依存関係を削除してください。"
+msgstr "サンプルプロジェクトには、RESTEasy、Undertow、Reactive Routes、 link:funqy-http.html[FunqyのHTTP]エクステンションが含まれています。これらの API のうち 1 つだけを使用する場合 (例: jax-rs のみ) は、それぞれ `quarkus-resteasy`, `quarkus-undertow`, `quarkus-funqy-http`, および/または `quarkus-reactive-routes` の maven 依存関係を削除してください。"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:104
