--- a/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
@@ -1310,7 +1310,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect.adoc:668
 #, fuzzy
 msgid "Note that the `quarkus-test-oidc-server` extension includes a signing RSA private key file in a `JSON Web Key` (`JWK`) format and points to it with a `smallrye.jwt.sign.key.location` configuration property. It allows to use a no argument `sign()` operation to sign the token."
-msgstr "`quarkus-test-oidc-server` 拡張機能には、 `JSON Web Key` ( `JWK`) 形式の署名用 RSA 秘密鍵ファイルが含まれており、 `smallrye.jwt.sign.key.location` 構成プロパティでそれを指すことに注意してください。これにより、引数なしの `sign()` 操作を使用して、トークンに署名することができます。"
+msgstr "`quarkus-test-oidc-server` エクステンションには、 `JSON Web Key` ( `JWK`) 形式の署名用 RSA 秘密鍵ファイルが含まれており、 `smallrye.jwt.sign.key.location` 構成プロパティでそれを指すことに注意してください。これにより、引数なしの `sign()` 操作を使用して、トークンに署名することができます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:671
