--- a/l10n/po/ja_JP/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc.po
@@ -112,7 +112,7 @@ msgstr "アップデートされた設定フレームワークでは、特に環
 #: upstream/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc:36
 #, fuzzy
 msgid "1.1 also comes with YAML support for the Quarkus configuration: add the `config-yaml` extension and Quarkus will consume your `application.yaml` file. More information in https://quarkus.io/guides/config#yaml[the Configuration guide]."
-msgstr "1.1では、Quarkusの設定にYAMLがサポートされています。 `config-yaml` 拡張子を追加すると、Quarkusは `application.yaml` ファイルを消費します。詳細は link:https://quarkus.io/guides/config#yaml[設定ガイド]を参照してください。"
+msgstr "1.1では、Quarkusの設定にYAMLがサポートされています。 `config-yaml` エクステンションを追加すると、Quarkusは `application.yaml` ファイルを消費します。詳細は link:https://quarkus.io/guides/config#yaml[設定ガイド]を参照してください。"
 
 #. type: Title ===
 #: upstream/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc:37
