--- a/l10n/po/ja_JP/_posts/2020-05-05-introducing-command-mode.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-05-05-introducing-command-mode.adoc.po
@@ -309,7 +309,7 @@ msgstr "実際に、先ほど作成したデフォルトのアプリでは、res
 #: upstream/_posts/2020-05-05-introducing-command-mode.adoc:128
 #, fuzzy
 msgid "In case you truly want a minimal extension you remove the `quarkus-resteasy` extension in your `pom.xml` and put `arc` instead."
-msgstr "本当に最小限の拡張子にしたい場合は、 `pom.xml` の中の `quarkus-resteasy` という拡張子を削除し、代わりに `arc` を入れます。"
+msgstr "本当に最小限のエクステンションにしたい場合は、 `pom.xml` の中の `quarkus-resteasy` というエクステンションを削除し、代わりに `arc` を入れます。"
 
 #. type: Plain text
 #: upstream/_posts/2020-05-05-introducing-command-mode.adoc:130
